...
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:id="@+id/hotelPriceBar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentBottom="true"
		android:background="@color/colorPrimary"
		android:padding="10dp">

...
				<RelativeLayout
					android:id="@+id/hotelImagesLyt"
					android:layout_width="match_parent"
					android:layout_height="@dimen/image_fragment_normal_height">

					<android.support.v7.widget.RecyclerView
						android:id="@+id/hotel_image_list"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scrollbars="horizontal" />

					<ImageView
						android:id="@+id/fullScreenBtn"
...
